cluster/apps/tor-relay/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: tor-relay
  namespace: tor
spec:
  ports:
    - name: pt-port-tcp
      port: 30913
      nodePort: 30913
      protocol: TCP
    - name: or-port
      port: 30932
      nodePort: 30932
      protocol: TCP
  selector:
    app.kubernetes.io/instance: tor-relay
    app.kubernetes.io/name: tor-relay
  type: NodePort
